--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Chaos Computer Craft  
 author: Lena Kurtz
   name: Lena Marie Kurtz
-  email: chaoscomputercraft
+  email: chaoscomputercraft@protonmail.com
 
 # The `>` after `description:` means to ignore line-breaks until next key.
 # If you want to omit the line-break after the end of text, use `>-` instead.
