--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Chaos Computer Craft  
 author: Lena Kurtz
-  name: Lena Marie Kurtz
+  name: Lenakurtz
   email: chaoscomputercraft@protonmail.com
 
 # The `>` after `description:` means to ignore line-breaks until next key.
