--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
-title: Chaos Computer Craft  
-author: Lena Kurtz
+title: Chaos Computer Craft
+author:
   name: GitHub User
-  email: chaoscomputercraft@protonmail.com
+  email: your-email@domain.com
 
 # The `>` after `description:` means to ignore line-breaks until next key.
 # If you want to omit the line-break after the end of text, use `>-` instead.
 description: >
-  Write an awesome description for your new site here. You can edit this line
+  Documenting my work on my BA Thesis in Fashion Design Write an awesome description for your new site here. You can edit this line
   in _config.yml. It will appear in your document head meta (for Google search
   results) and in your feed.xml site description.
 
